# ina_backend_fyp

./: Procfile  mock_tenant_simulator.py  pyproject.toml
alembic/: env.py
alembic/versions/: 527a6e865c91_add_client_policy_api_endpoint_and_.py  93ec4bcf595d_add_client_policy_api_endpoint_and_.py  b10e2ae52a91_analytics_table_created.py  b5a528145871_add_new_fields.py
src/ina_backend/app/: auth.py  config.py  database.py  main.py  models.py  redis_client.py  schemas.py
src/ina_backend/app/routers/: analytics.py  auth.py  policy.py  session.py  tenant_config.py
src/ina_backend/scripts/: create_tables.py
tests/: test_auth.py
